--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -178,6 +178,7 @@
     <!-- Templates -->
     <string name="type_template_text">Type template text…</string>
     <string name="delete_template">Are you sure you want to delete this template?</string>
+    <string name="no_templates">Use the <b>+</b> button to create a template</string>
 
     <!-- Compose Screen -->
     <string name="compose_message">Compose new message</string>
