--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -349,6 +349,9 @@
     <string name="global_theme_color">Theme Color</string>
     <string name="font_size">Font Size</string>
     <string name="rounder_bubbles">Round Message Bubbles</string>
+    <string name="adjustable_nav_bar">Match Nav Bar to Base Theme</string>
+    <string name="adjustable_nav_bar_summary">The light theme will use the white navigation bar, while the
+        darker themes will use the black navigation bar</string>
     <string name="apply_theme_globally">Apply to all Conversations</string>
     <string name="apply_theme_globally_summary">Remove the per-conversation themes, in favor
         of this global color set</string>
