add a 'login' button to the page where the user can select a purchase option, in case they already have an account

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -584,6 +584,7 @@
         Send texts from the web, a desktop computer, your tablet, a watch, and even your TV.</string>
     <string name="true_imessage_competitor">The first <b>true</b> iMessage competitor for Android.</string>
     <string name="try_it">Try it now!</string>
+    <string name="have_an_account">Have an account?\nSign in</string>
     <string name="seven_days_free">7 days free!</string>
     <string name="competition_cant_beat">The competition can\'t touch our prices, speed, or service -
         <b>take 7 days</b> to find out for yourself!</string>
