set up for the contact and keyword auto-reply creation

--- a/shared/src/main/res/values/strings.xml
+++ b/shared/src/main/res/values/strings.xml
@@ -440,6 +440,7 @@
     <string name="auto_reply_text">Message Text</string>
     <string name="create_auto_reply">Create a New Auto-Reply</string>
     <string name="delete_auto_reply">Delete auto-reply?</string>
+    <string name="which_auto_reply_type">Which type of auto reply would you like to create?</string>
     <string name="keyword">Keyword</string>
     <string name="contact">Contact</string>
 
